@@ -19,7 +19,6 @@ package com.wazuh.contentmanager;
 import org.opensearch.client.Client;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.node.DiscoveryNode;
-import org.opensearch.cluster.node.DiscoveryNodes;
 import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.settings.*;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
@@ -30,8 +29,6 @@ import org.opensearch.plugins.ActionPlugin;
 import org.opensearch.plugins.ClusterPlugin;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.repositories.RepositoriesService;
-import org.opensearch.rest.RestController;
-import org.opensearch.rest.RestHandler;
 import org.opensearch.script.ScriptService;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.watcher.ResourceWatcherService;
@@ -42,18 +39,16 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
-import com.wazuh.contentmanager.index.ContentIndex;
+import com.wazuh.contentmanager.client.CTIClient;
 import com.wazuh.contentmanager.index.ContextIndex;
-import com.wazuh.contentmanager.rest.*;
+import com.wazuh.contentmanager.model.ctiapi.ConsumerInfo;
 import com.wazuh.contentmanager.settings.PluginSettings;
+import com.wazuh.contentmanager.util.Privileged;
 
+/** Main class of the Content Manager Plugin */
 public class ContentManagerPlugin extends Plugin implements ClusterPlugin, ActionPlugin {
 
-    public static final String CONTEXT_NAME = "vd_1.0.0";
-    public static final String CONSUMER_NAME = "vd_4.8.0";
-
     private ContextIndex contextIndex;
-    private ContentIndex contentIndex;
 
     /** ClassConstructor * */
     public ContentManagerPlugin() {}
@@ -71,35 +66,21 @@ public class ContentManagerPlugin extends Plugin implements ClusterPlugin, Actio
             NamedWriteableRegistry namedWriteableRegistry,
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<RepositoriesService> repositoriesServiceSupplier) {
-        this.contentIndex = new ContentIndex(client, clusterService, threadPool);
-        this.contextIndex = new ContextIndex(client, clusterService, threadPool);
-
         PluginSettings.getInstance(environment.settings(), clusterService);
-        return List.of(this.contentIndex, this.contextIndex);
+        this.contextIndex = new ContextIndex(client);
+        return Collections.emptyList();
     }
 
-    @Override
-    public List<RestHandler> getRestHandlers(
-            Settings settings,
-            RestController restController,
-            ClusterSettings clusterSettings,
-            IndexScopedSettings indexScopedSettings,
-            SettingsFilter settingsFilter,
-            IndexNameExpressionResolver indexNameExpressionResolver,
-            Supplier<DiscoveryNodes> nodesInCluster) {
-        // Just for testing purposes
-        return List.of(
-                new RestPostContextAction(this.contextIndex),
-                new RestPostContentManager(this.contentIndex),
-                new CatalogHandler(),
-                new ChangesHandler(),
-                new UpdaterHandler());
-    }
-
+    /**
+     * Call the CTI API on startup and get the latest consumer information into an index
+     *
+     * @param localNode local Node info
+     */
     @Override
     public void onNodeStarted(DiscoveryNode localNode) {
-        this.contextIndex.createIndex();
-        this.contentIndex.createIndex();
+        ConsumerInfo consumerInfo =
+                Privileged.doPrivilegedRequest(() -> CTIClient.getInstance().getCatalog());
+        this.contextIndex.index(consumerInfo);
     }
 
     /**
@@ -114,6 +95,6 @@ public class ContentManagerPlugin extends Plugin implements ClusterPlugin, Actio
 
     @Override
     public List<Setting<?>> getSettings() {
-        return Collections.singletonList(PluginSettings.CTI_BASE_URL);
+        return Collections.singletonList(PluginSettings.CTI_API_URL);
     }
 }
